- Adicionando um web service - Definindo ordem de execução dos filtros - Transformado servlet do controlador em filtro

--- a/Java/alura/servlets/gerenciador/WebContent/WEB-INF/web.xml
+++ b/Java/alura/servlets/gerenciador/WebContent/WEB-INF/web.xml
@@ -27,6 +27,14 @@
   	<filter-name>AF</filter-name>
   	<url-pattern>/entrada</url-pattern>
   </filter-mapping>
-  
+  <filter>
+  	<filter-name>CF</filter-name>
+  	<filter-class>br.com.alura.gerenciador.servlet.ControladorFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>CF</filter-name>
+  	<url-pattern>/entrada</url-pattern>
+  </filter-mapping>
+
 
 </web-app>
